--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -60,8 +60,14 @@ jobs:
             --gc \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"          
-      - name: Copy images
-        run: cp -r ${{ runner.temp }}/hugo_cache/content/images ./public/img/
+      # - name: Copy images
+      #   run: cp -r ${{ runner.temp }}/hugo_cache/content/images ./public/img/
+      - name: Ls1
+        run: ls ${{ runner.temp }}/hugo_cache
+      - name: Ls2
+        run: ls ${{ runner.temp }}
+      - name: Ls3
+        run: ls .
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
