--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
 /public/
+public/index.xml
+public/categories/index.html
+public/en/index.html
+public/en/categories/index.html
+public/en/series/index.html
+public/en/tags/index.html
+public/es/index.html
+public/es/categories/index.html
+public/es/series/index.html
+public/es/tags/index.html
+public/impressum/index.html
+public/series/index.html
+public/tags/index.html
