--- a/hugo.toml
+++ b/hugo.toml
@@ -40,6 +40,9 @@ enable = true
 title = 'Klare Lösungen<br />Für komplexe Probleme'
 body = '''
 Qualitätsanspruch, enger Kundenkontakt und klare Dokumentation.  
+  
+Ich unterstütze bei individuellen AI-Lösungen, Deployment und Management  
+von diversen Software-Stacks, Cloud Architecture bis hin zur Optimierung.
 
 '''
 
