--- a/hugo.toml
+++ b/hugo.toml
@@ -42,7 +42,7 @@ body = '''
 Qualitätsanspruch, enger Kundenkontakt und klare Dokumentation.  
   
 Ich unterstütze bei individuellen AI-Lösungen, Deployment und Management  
-von diversen Software-Stacks, Cloud Architecture bis hin zur Optimierung.
+von diversen Software-Stacks, Cloud Architecture, sowie Optimierung bestehender Systeme.
 
 '''
 
