--- a/hugo.toml
+++ b/hugo.toml
@@ -7,7 +7,7 @@ defaultContentLanguage = "de"
 
 title = 'Christoph Süßer IT Dienstleistungen'
 
-paginate = "7"
+pagination.pagerSize = "7"
 theme = "spectral"
 #googleAnalytics = "G-XXXXXXXXXX"
 
